<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>clientIP</artifactId>
		<groupId>it.uninsubria.labB717304</groupId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<artifactId>client.gui</artifactId>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>14</maven.compiler.source>
		<maven.compiler.target>14</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>15</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>15</version>
		</dependency>
		<dependency>
			<groupId>it.uninsubria.labB717304</groupId>
			<artifactId>utils.business</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>it.uninsubria.labB717304</groupId>
			<artifactId>client.core</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.0.2</version>
		</dependency>
		<dependency>
			<groupId>com.jfoenix</groupId>
			<artifactId>jfoenix</artifactId>
			<version>9.0.10</version>
		</dependency>
		<dependency>
			<groupId>it.uninsubria.labB717304</groupId>
			<artifactId>utils.languages</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>14</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.5</version>
				<configuration>
					<options>
						<option>--add-opens java.base/java.lang.reflect=com.jfoenix</option>
						<option>--add-exports javafx.graphics/com.sun.javafx.scene=com.jfoenix</option>
						<option>--add-opens javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
						<option>--add-opens javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
						<option>--add-opens javafx.base/com.sun.javafx.binding=com.jfoenix</option>
						<option>--add-opens javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
						<option>--add-opens javafx.base/com.sun.javafx.event=com.jfoenix</option>
					</options>
					<launcher>Il_Paroliere</launcher>
					<mainClass>uninsubria.client.gui.Launcher</mainClass>
					<jlinkImageName>Il_Paroliere</jlinkImageName>
					<jlinkZipName>Il_Paroliere</jlinkZipName>
				</configuration>
				<executions>
					<execution>
						<phase>install</phase>
						<goals>
							<goal>jlink</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
